# bifrost_enterobase

./: environment.yml  install.sh  setup.cfg  setup.py
bifrost_enterobase/: EnteroLookup.py  __init__.py  __main__.py  config.yaml  datadump.py  datadump.py~  launcher.py  pipeline.smk
resources/: 2021_10_25_serov.json
tests/: test_simple.py
