[bumpversion]
current_version = 1.1.5
parse = ((?P<major>\d+))(.(?P<minor>\d+))(.(?P<patch>\d+))
serialize = {major}.{minor}.{patch}
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_enterobase/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_enterobase/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:tests/test_simple.py]
search = component_name = "enterobase__v{current_version}"
replace = component_name = "enterobase__v{new_version}"

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = 
	tests
